<resources>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="STR_ADDITIONAL_CONTENT_SIZE">Additional content size: %1$s %2$s</string>
    <string name="STR_ALL">ALL</string>
    <string name="STR_APPS_DESCRIPTION">Select apps recommended by your service provider.</string>
    <string name="STR_APPS_DESCRIPTION_DOWNLOADED">All of your selected apps have been downloaded.</string>
    <string name="STR_APP_BUTTON_CANCEL">Cancel</string>
    <string name="STR_APP_BUTTON_OK">OK</string>
    <string name="STR_APP_INSTALLER_DESC_COMMON">Selece apps recommended by your service provider.</string>
    <string name="STR_APP_INSTALL_CONFIRM">Select the apps you want to install.</string>
    <string name="STR_APP_INSTALL_TITLE">Install apps</string>
    <string name="STR_APP_STATE_CANCELED">Cancelled</string>
    <string name="STR_APP_STATE_CONNECTING">Connecting…</string>
    <string name="STR_APP_STATE_DOWNLOADING">Downloading…</string>
    <string name="STR_APP_STATE_DOWNLOAD_FAIL">Download fail</string>
    <string name="STR_APP_STATE_INSTALLED">Installed</string>
    <string name="STR_APP_STATE_INSTALLING">Installing…</string>
    <string name="STR_APP_STATE_INSTALL_FAIL">Installation failed</string>
    <string name="STR_APP_STATE_WAITING">Waiting…</string>
    <string name="STR_BTN_INSTALL">Install</string>
    <string name="STR_BTN_INSTALL_ALL">Install all</string>
    <string name="STR_BTN_SKIP">Skip</string>
    <string name="STR_BUTTON_NEXT">Next</string>
    <string name="STR_CAUTION_BODY">After downloading, restart to install the update. You will not be able to use your phone, even to make emergency calls, until the installation is finished.</string>
    <string name="STR_CAUTION_BODY2">After the update, some settings may be reset to their default values.</string>
    <string name="STR_CHARING_DIALOG">Downloading using mobile data may result in additional charges.</string>
    <string name="STR_CHARING_DIALOG_TITLE">Download using mobile data?</string>
    <string name="STR_CONNECTING_TO_SERVER">Connecting to server…</string>
    <string name="STR_CONNECT_FAIL">Connection failed. Try later.</string>
    <string name="STR_DOWNLOADING_PACKAGE">Downloading the updates…</string>
    <string name="STR_DOWNLOADING_RESOURCE">Downloading…</string>
    <string name="STR_DOWNLOAD_FAIL">Download failed. Try later.</string>
    <string name="STR_DOWNLOAD_INSTALL_CONFIRM">To use the latest features, download and install this firmware update.</string>
    <string name="STR_DOWNLOAD_RESOURCE_FAIL">Resource Download failed. Try later.</string>
    <string name="STR_FAILED_NOTI">Download failed.</string>
    <string name="STR_INITIAL_NOTI">Tap here to select recommended apps for download.</string>
    <string name="STR_INITIAL_NOTI_UPDATE">Tap here to download and install the update.</string>
    <string name="STR_INSTALLED_NOTI">%d installed</string>
    <string name="STR_INSTALL_ADDITIONAL_CONTENT">Install additional content</string>
    <string name="STR_INSTALL_CAUTIONS">Caution</string>
    <string name="STR_INSTALL_CONFIRM_DOWNLOADING_VIA_NETWORK">This update includes some optional apps and content. Downloading via mobile networks may result in additional charges depending on your payment plan.</string>
    <string name="STR_INSTALL_CONFIRM_NOTI">Downloaded.</string>
    <string name="STR_INSTALL_FORCE">Your critical software update has been downloaded. Your device will restart in %d seconds to begin installation.</string>
    <string name="STR_KILOBYTE">KB</string>
    <string name="STR_LINK_LEARNMORE">Learn more</string>
    <string name="STR_MEGABYTE">MB</string>
    <string name="STR_NEED_WIFI">You need to be connected to Wi-Fi to download apps. Connect to Wi-Fi and try again.</string>
    <string name="STR_NEED_WIFI_TITLE">No Wi-Fi connection</string>
    <string name="STR_NETWORK_FAIL">Network not available. Try again later.</string>
    <string name="STR_NO_APPS">No apps</string>
    <string name="STR_NO_CONTENT">Available apps released from your service provider will be shown here.</string>
    <string name="STR_NO_ITEMS">No Items</string>
    <string name="STR_NO_ITEM_SELECTED">No item selected</string>
    <string name="STR_OMC_HEADER">Service provider update</string>
    <string name="STR_OMC_SIZE">Size: %s</string>
    <string name="STR_OMC_TITLE">Configuration update</string>
    <string name="STR_OMC_VERSION">Version: %s</string>
    <string name="STR_OPERATOR_SETTINGS">Operator settings</string>
    <string name="STR_PROCESS_FAIL">Processing failed.</string>
    <string name="STR_PROVIDER_APPS">Service provider apps</string>
    <string name="STR_REGISTERING_DEVICE">Registering device…</string>
    <string name="STR_REGISTER_FAIL">Registration failed.</string>
    <string name="STR_REGISTER_SUCCESS">Device registered.</string>
    <string name="STR_RESTART_BTN_LATER">Later</string>
    <string name="STR_RESTART_BTN_RESTART">Restart</string>
    <string name="STR_UPDATE_BODY1">• Downloading using mobile data may result in additional charges.</string>
    <string name="STR_UPDATE_BODY2">• Your phone will restart after the update is installed.</string>
    <string name="STR_UPDATE_HEADER1">Download and install the latest software from your service provider.</string>
    <string name="STR_WIDGET_DEFAULT">Install apps recommended by your service provider.</string>
    <string name="NTSTR_API_TEST">Open API Test</string>
    <string name="NTSTR_CLEAR">Clear all status</string>
    <string name="NTSTR_COMPARE_STATUS">Check omc.status</string>
    <string name="NTSTR_CONFIGURATION_UPDATE_ACTIVITY">Configuration update Activity</string>
    <string name="NTSTR_DEVICE_INFO">Device Info</string>
    <string name="NTSTR_DEVICE_REGISTERED">Registration</string>
    <string name="NTSTR_DM_ADMIN">Call DM Admin</string>
    <string name="NTSTR_GET_MORE_APPS_ACTIVITY">Get more Apps Activity</string>
    <string name="NTSTR_GID">GID</string>
    <string name="NTSTR_INSTALL_FINISH">Setupwizard App List</string>
    <string name="NTSTR_ITEM_DESCRIPTION">description</string>
    <string name="NTSTR_ITEM_SIZE">size</string>
    <string name="NTSTR_ITEM_STATE">state</string>
    <string name="NTSTR_ITEM_TITLE">title</string>
    <string name="NTSTR_LOCAL_CONFIGS">Configs Local Test</string>
    <string name="NTSTR_MCC">MCC</string>
    <string name="NTSTR_MNC">MNC</string>
    <string name="NTSTR_OMC_TEST">OMC Test for QA</string>
    <string name="NTSTR_SELECT_SERVERTYPE">Server Type</string>
    <string name="NTSTR_SETTINGS">Settings</string>
    <string name="NTSTR_SETTING_OMC_TEST">Input OMC Info</string>
    <string name="NTSTR_SET_APP_SERVER">Set Apps Server(Deploy/Pre-Deploy)</string>
    <string name="NTSTR_SET_OMC_INFO">Set Test SIM Info</string>
    <string name="NTSTR_SIM_INFO">SIM Info</string>
    <string name="NTSTR_SPN">SPN</string>
    <string name="NTSTR_STATUS">Status</string>
    <string name="NTSTR_SUBSET">SUBSETCODE</string>
    <string name="NTSTR_TEST">Test</string>
    <string name="NTSTR_TESTMODE">Test Modes</string>
    <string name="NTSTR_TEST_GUIDE">Please select Install button and wait until all steps are finished.</string>
    <string name="NTSTR_TEST_WARNNING">"WARNNING:
ONLY FOR CONFIGURATION TESTER"</string>
    <string name="NTSTR_UPDATE_CARRIER">Configuration Update</string>
    <string name="NTSTR_VERSION_INFO">OMC Version Info</string>
    <string name="WSS_STR_ACCESS_NAME">APN</string>
    <string name="WSS_STR_APN_TYPE">APN type</string>
    <string name="WSS_STR_AUTH_TYPE">Client auth type</string>
    <string name="WSS_STR_PORT">Port</string>
    <string name="WSS_STR_PROFILE_NAME">Profile name</string>
    <string name="WSS_STR_PROXY">Proxy</string>
    <string name="WSS_STR_PW">Password</string>
    <string name="WSS_STR_SERVER_ADDR">Server address</string>
    <string name="WSS_STR_SERVER_AUTHTYPE">Server auth type</string>
    <string name="WSS_STR_SERVER_ID">Server ID</string>
    <string name="WSS_STR_SERVER_PW">Server password</string>
    <string name="WSS_STR_UserID">User ID</string>
    <string name="WSS_STR_UserName">Username</string>
    <string name="WSS_STR_UserPWD">User password</string>
</resources>