<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_gravity="top" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/NProfileLinear" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/NProfileText0" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:id="@id/NProfileText1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/WSS_STR_ACCESS_NAME" />
        <EditText android:textSize="18.0sp" android:id="@id/NProfileEdit1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="text" />
        <TextView android:id="@id/NProfileText2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/WSS_STR_PROXY" />
        <EditText android:textSize="18.0sp" android:id="@id/NProfileEdit2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="text" />
        <TextView android:id="@id/NProfileText3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/WSS_STR_PORT" />
        <EditText android:textSize="18.0sp" android:id="@id/NProfileEdit3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="5" android:inputType="number" />
        <TextView android:id="@id/NProfileText4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/WSS_STR_UserName" />
        <EditText android:textSize="18.0sp" android:id="@id/NProfileEdit4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="text" />
        <TextView android:id="@id/NProfileText5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/WSS_STR_PW" />
        <EditText android:textSize="18.0sp" android:id="@id/NProfileEdit5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textPassword" />
        <TextView android:id="@id/NProfileText7" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/WSS_STR_APN_TYPE" />
        <Spinner android:id="@id/Spinner01" android:layout_width="fill_parent" android:layout_height="wrap_content" android:drawSelectorOnTop="true" android:prompt="@string/WSS_STR_APN_TYPE" />
        <TextView android:id="@id/NProfileText6" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/WSS_STR_AUTH_TYPE" />
        <Spinner android:id="@id/Spinner02" android:layout_width="fill_parent" android:layout_height="wrap_content" android:drawSelectorOnTop="true" android:prompt="@string/WSS_STR_AUTH_TYPE" />
    </LinearLayout>
</ScrollView>