<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/activity_padding_default" android:layout_marginBottom="@dimen/activity_padding_default" android:paddingStart="@dimen/activity_padding_default" android:paddingEnd="@dimen/activity_padding_default"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/NTSTR_TEST_WARNNING" style="@style/list_no_item_body_text" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_padding_default" android:text="@string/NTSTR_TEST_GUIDE" />
    <Button android:layout_gravity="center" android:id="@id/btn_install" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_padding_default" android:text="@string/STR_BTN_INSTALL" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/list_description_text_color" android:id="@id/statetext" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_padding_default" />
    <ProgressBar android:id="@id/progress" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" style="?android:attr/progressBarStyleHorizontal" />
</LinearLayout>